# notes_app

./: Cargo.toml  README.md
docs/: architecture.md  roadmap.md
src/: highlight.rs  lib.rs  main.rs
src/app/: actions.rs  mod.rs  state.rs
src/cli/: commands.rs  mod.rs
src/config/: mod.rs  themes.rs
src/journaling/: autosave.rs  mod.rs
src/search/: mod.rs
src/storage/: mod.rs  schema.rs
src/ui/: mod.rs
